--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
 
   <script src="components/loader.js"></script>
   <script src="lib/jquery-3.5.1.min.js"></script>
+  <script src="components/acao.js"></script>
 
   <link rel="stylesheet" href="components/loader.css">
   <link rel="stylesheet" href="css/style.css">
@@ -18,6 +19,51 @@
   </script>
 </head>
 <body>
-Olá, mundo!
+  <div class="container">
+    <div class="row">
+        <div class="col-12 text-center">  
+          CONSUMO DIÁRIO
+        </div>
+        <br>
+        <div id="body" class="col-6">
+          Este aplicativo tem como objetivo direcionar o consumo correto de calorias diárias, baseando-se no peso do usuário.
+        </div>
+        <div id="genero" class="col-6">
+          Selecione seu gênero:
+          <input type="radio" id="male" name="gender" value="male">
+          <label for="male">Masculino</label><br>
+          <input type="radio" id="female" name="gender" value="female">
+          <label for="female">Feminino</label><br>
+        </div>
+    </div>
+    <div class="row">
+      <div class="col-12 form-group text-center">
+       <label for="altura">Altura</label>
+        <input type="text" id="altura" name="altura">
+      </div>
+    <div class="col-12 form-group text-block text-center">
+        <label for="peso">Peso</label>
+        <input type="text" id="peso" name="peso">
+    </div>
+    <div class="col-12 form-group text-center">
+        <label for="idade">Idade</label>
+        <input type="text" id="idade" name="idade">
+    </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+          <div class="form-group">
+            <button class="btn btn-primary btn-block">Calcular</button>
+          </div>
+        </div>
+    <div class="col-12">
+      <div class="form-group">
+        <label for="">Resultado: </label>
+        <input type="text" class="form-control" readonly id="resp">
+      </div>
+    </div>
+    </div>
+    </div>
+  </div>
 </body>
 </html>
